Bug 1915811 - Remove sidebar splitter z-index r=desktop-theme-reviewers,emilio
This was added in Bug 1910733 but no longer needed.

Differential Revision: https://phabricator.services.mozilla.com/D220723

--- a/browser/themes/shared/sidebar.css
+++ b/browser/themes/shared/sidebar.css
@@ -102,10 +102,6 @@
   @media (-moz-bool-pref: "sidebar.revamp") {
     transition: background-color 0.5s ease-in-out;
     border-color: transparent;
-    /* #sidebar splitter requires z-index manipulation in order to be
-    interactive and allow box shadows for #sidebar-box and #appcontent
-    to be visible  */
-    z-index: 2;
 
     &:hover {
       background-color: var(--focus-outline-color);
